[package]
name = "hue-rules"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
huelib = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
